--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,8 +18,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorSurface"
-            app:title="Hola, Juan Jose" />
+            android:background="?attr/colorSurface" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
