--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,44 +8,62 @@
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.juangilles123.monifly.ui.LoginFragment"
-        android:label="fragment_login"
+        android:label="Iniciar Sesión"
         tools:layout="@layout/fragment_login" >
         <action
             android:id="@+id/action_loginFragment_to_dashboardFragment"
-            app:destination="@id/dashboardFragment" />
+            app:destination="@id/dashboardFragment"
+            app:popUpTo="@id/loginFragment"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_loginFragment_to_registerFragment"
+            app:destination="@id/registerFragment" />
     </fragment>
+
+    <fragment
+        android:id="@+id/registerFragment"
+        android:name="com.juangilles123.monifly.ui.RegisterFragment"
+        android:label="Crear Cuenta"
+        tools:layout="@layout/fragment_register" >
+        <action
+            android:id="@+id/action_registerFragment_to_dashboardFragment"
+            app:destination="@id/dashboardFragment"
+            app:popUpTo="@id/loginFragment"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_registerFragment_to_loginFragment"
+            app:destination="@id/loginFragment"
+            app:popUpTo="@id/loginFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+
     <fragment
         android:id="@+id/dashboardFragment"
         android:name="com.juangilles123.monifly.ui.DashboardFragment"
         android:label="Inicio"
         tools:layout="@layout/fragment_dashboard" >
         <action
+            android:id="@+id/action_dashboardFragment_to_analyticsFragment"
+            app:destination="@id/analyticsFragment" />
+        <action
+            android:id="@+id/action_dashboardFragment_to_debtsFragment"
+            app:destination="@id/debtsFragment" />
+        <action
+            android:id="@+id/action_dashboardFragment_to_goalsFragment"
+            app:destination="@id/goalsFragment" />
+        <action
+            android:id="@+id/action_dashboardFragment_to_profileFragment"
+            app:destination="@id/profileFragment" />
+        <action
+            android:id="@+id/action_dashboardFragment_to_configurationFragment"
+            app:destination="@id/configurationFragment" />
+        <action
             android:id="@+id/action_dashboardFragment_to_addIncomeFragment"
             app:destination="@id/addIncomeFragment" />
         <action
             android:id="@+id/action_dashboardFragment_to_addExpenseFragment"
             app:destination="@id/addExpenseFragment" />
-        <action
-            android:id="@+id/action_dashboardFragment_to_analyticsFragment"
-            app:destination="@id/analyticsFragment2" />
     </fragment>
-    <fragment
-        android:id="@+id/analyticsFragment2"
-        android:name="com.juangilles123.monifly.ui.AnalyticsFragment"
-        android:label="fragment_analytics"
-        tools:layout="@layout/fragment_analytics" />
-
-    <fragment
-        android:id="@+id/addIncomeFragment"
-        android:name="com.juangilles123.monifly.ui.AddIncomeFragment"
-        android:label="Añadir Ingreso"
-        tools:layout="@layout/fragment_add_income" />
-
-    <fragment
-        android:id="@+id/addExpenseFragment"
-        android:name="com.juangilles123.monifly.ui.AddExpenseFragment"
-        android:label="Añadir Gasto"
-        tools:layout="@layout/fragment_add_expense" />
 
     <fragment
         android:id="@+id/debtsFragment"
@@ -74,6 +92,69 @@
             app:nullable="false" />
         <argument
             android:name="debtId"
+            app:argType="string"
+            app:nullable="true"
+            android:defaultValue="@null" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/configurationFragment"
+        android:name="com.juangilles123.monifly.ui.ConfigurationFragment"
+        android:label="Configuración"
+        tools:layout="@layout/fragment_configuration" />
+
+    <fragment
+        android:id="@+id/goalsFragment"
+        android:name="com.juangilles123.monifly.ui.GoalsFragment"
+        android:label="Metas"
+        tools:layout="@layout/fragment_goals" />
+
+    <fragment
+        android:id="@+id/analyticsFragment"
+        android:name="com.juangilles123.monifly.ui.AnalyticsFragment"
+        android:label="Análisis"
+        tools:layout="@layout/fragment_analytics" />
+
+    <fragment
+        android:id="@+id/profileFragment"
+        android:name="com.juangilles123.monifly.ui.ProfileFragment"
+        android:label="Perfil"
+        tools:layout="@layout/fragment_profile" >
+        <action
+            android:id="@+id/action_profileFragment_to_settingsFragment"
+            app:destination="@id/settingsFragment" />
+        <action
+            android:id="@+id/action_profileFragment_to_loginFragment"
+            app:destination="@id/loginFragment"
+            app:popUpTo="@id/nav_graph"
+            app:popUpToInclusive="true" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="com.juangilles123.monifly.ui.SettingsFragment"
+        android:label="Configuración"
+        tools:layout="@layout/fragment_settings" />
+
+    <fragment
+        android:id="@+id/addIncomeFragment"
+        android:name="com.juangilles123.monifly.ui.AddIncomeFragment"
+        android:label="Añadir Ingreso"
+        tools:layout="@layout/fragment_add_income" >
+        <argument
+            android:name="transactionId"
+            app:argType="string"
+            app:nullable="true"
+            android:defaultValue="@null" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/addExpenseFragment"
+        android:name="com.juangilles123.monifly.ui.AddExpenseFragment"
+        android:label="Añadir Gasto"
+        tools:layout="@layout/fragment_add_expense" >
+        <argument
+            android:name="transactionId"
             app:argType="string"
             app:nullable="true"
             android:defaultValue="@null" />
